--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "psr-4": {"Fervo\\ValidatedMessage\\": "src/"}
     },
     "require": {
-        "symfony/validator": "^2.3 || ^3.0",
-        "simple-bus/message-bus": "^2.0"
+        "symfony/validator": "^2.3 || ^3.0 || 4.0",
+        "simple-bus/message-bus": "^2.0 || ^3.0"
     }
 }
